<resources>
    <string name="app_name">Note</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_notes">Your notes</string>
    <string name="fab_content_desc">Add a new note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_new_note">Add a new note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="view">View</string>
    <string name="your_note">Your note</string>
    <string name="delete">Delete</string>
    <string name="upload_media">Upload media</string>
    <string name="show_the_note_in_home_screen">Show the note in home screen</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="upload_a_video">Upload a video</string>
    <string name="add_a_note">Add a note</string>
    <string name="create_your_notes_it_is_very_easy">Create your notes. It is very easy.</string>
    <string name="there_are_no_results">There are no results</string>
    <string name="your_uploaded_media">Your uploaded media</string>
    <string name="delete_the_media">Delete the media</string>
    <string name="update_the_note">Update the note</string>
    <string name="your_media">Your media</string>
    <string name="notes">Notes</string>
    <string name="media">Media</string>
    <string name="read_a_note">Read a note</string>
    <string name="view_media">View media</string>
</resources>