<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.note.ui.add_note.AddNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space"
        >

        <TextView
            android:id="@+id/text_dashboard"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/add_a_new_note"
            android:textAlignment="center"
        />

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="clear_text"
            android:id="@+id/titleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titleInput"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="clear_text"
            android:id="@+id/descrField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descrInput"
                android:minLines="10"
                android:maxLength="900"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/show_the_note_in_home_screen"
            android:layout_marginTop="@dimen/space_half"
            />

        <Button
            android:id="@+id/add_note_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/space"
            />
    </LinearLayout>
</ScrollView>