<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/space_half"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space"
            >
            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginBottom="@dimen/space_half"
                />

            <TextView
                android:id="@+id/text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_notes"
                />

            <Button
                android:id="@+id/view_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/view"
                android:layout_marginTop="@dimen/space"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>