<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="android.view.View"/>
        <variable
            name="hasImages"
            type="androidx.databinding.ObservableBoolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.note.ui.add_note.AddNoteFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space"
            >

            <TextView
                android:id="@+id/text_dashboard"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/your_note"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/space"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space"
                android:visibility="gone"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imagesList"
                    android:orientation="horizontal"
                    android:padding="@dimen/space_half"
                    />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/space"
                    >
                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:layout_marginBottom="@dimen/space_half"
                        />

                    <TextView
                        android:id="@+id/title"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/your_notes"
                        android:layout_marginBottom="@dimen/space"
                        />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:layout_marginBottom="@dimen/space_half"
                        />

                    <TextView
                        android:id="@+id/description"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space"
                        />

                    <Button
                        android:id="@+id/delete_btn"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/delete"
                        android:gravity="center_horizontal"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        />

                    <Button
                        android:id="@+id/update_btn"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/update_the_note"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</layout>