<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_half"
        android:layout_marginTop="0dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/space"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/no_results_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/there_are_no_results"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                />

            <TextView
                android:id="@+id/helper_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_your_notes_it_is_very_easy"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/space"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_results_text"
                style="@style/TextAppearance.MaterialComponents.Body1"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_new_contact_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_note"
                android:layout_marginTop="@dimen/space_half"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/helper_text"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>